--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Random Choice Picker</title>
 </head>
 
 <body>
-    <h1>My project</h1>
+    <div class="choices">
+        <h3 class="choices-title">Enter all of the choices divided by a comma
+            <br>
+            Press enter when you are done
+        </h3>
+        <textarea class="choices-textarea" placeholder="Enter choices here..."></textarea>
+        <div class="choices-tag-list">
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
