--- a/index.html
+++ b/index.html
@@ -9,19 +9,11 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="style.css">
-    <title>Random Choice Picker</title>
+    <title>My Project</title>
 </head>
 
 <body>
-    <div class="choices">
-        <h3 class="choices-title">Enter all of the choices divided by a comma
-            <br>
-            Press enter when you are done
-        </h3>
-        <textarea class="choices-textarea" placeholder="Enter choices here..."></textarea>
-        <div class="choices-tag-list">
-        </div>
-    </div>
+    <h1>My project</h1>
     <script src="script.js"></script>
 </body>
 
